--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -5,11 +5,12 @@
     width: 73px;
     top: 49px;
     left: 0;
+    bottom: 0;
     height: 400px;
     background-color: white;
     font-size: 10px;
     text-align: center;
-    justify-content: space-evenly;
+    padding-top: 28px;
 }
 .sidebar img:not(.short-icon, .download-icon){
     width:24px;
@@ -22,7 +23,10 @@
 .download-icon{
     width: 16px;
     cursor: pointer;
+    padding-top: 5px;
 }
 .sidebar p{
     margin: 0;
+    padding-top: 3px;
+    padding-bottom: 28px;
 }
