--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 body{
     margin: 0;
-    padding-left: 88px;
+    padding-left: 87px;
     padding-right: 30px;
     padding-top: 130px;
 }
@@ -68,7 +68,7 @@ span{
 input{
     height: 40px;
     width: 532px;
-    padding-left:15px;
+    padding-left: 15px;
     border: 1px solid lightgray;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
@@ -171,7 +171,7 @@ input::placeholder{
     font-size: 13px;
     padding: 10px 8px;
     border-radius: 4px;
-    top: 61px;
+    top: 62px;
     left: -5px;
     z-index: 100;
     visibility: hidden;
@@ -247,7 +247,7 @@ input::placeholder{
     background-color: white;
     top: 55px;
     right: 0;
-    left: 70px;
+    left: 65px;
     height: 53px;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -286,7 +286,7 @@ input::placeholder{
     justify-content:start;
     align-items: center;
     position: fixed;
-    top: 50px;
+    top: 37px;
     left: 0;
     bottom: 0;
     width: 72px;
@@ -300,23 +300,30 @@ input::placeholder{
     align-items: center;
     width: 100%;
     height: 60px;
-    margin-bottom: 14px;
+    padding-bottom: 14px;
 }
 .home-icon, .sub-icon, .you-icon{
     width: 24px;
     padding-bottom: 2px;
+    padding-top: 13px;
 }
 .downloads-icon{
     width: 18px;
     padding-bottom: 4px;
+    padding-top: 13px;
 }
 .shorts-icon{
+    padding-top: 13px;
     margin-top: -3px;
     width: 28px;
 }
 .sidebar p{
     margin: 0;
     font-size: 10px;
+}
+.home:hover, .shorts-sidebar:hover, .sub:hover, .you:hover, .downloads:hover{
+    background-color: rgb(224, 223, 223);
+    border-radius: 6px;
 }
 
 
@@ -325,7 +332,7 @@ input::placeholder{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 18px;
-    row-gap: 33px;
+    row-gap: 20px;
     margin-left: 9px;
     padding-top: 6px;
 }
