--- a/index.css
+++ b/index.css
@@ -336,6 +336,36 @@ input::placeholder{
     margin-left: 9px;
     padding-top: 6px;
 }
+@media (max-width: 703px){
+    .video-grid{
+        grid-template-columns: 1fr;
+    }
+}
+@media (min-width: 704px) and (max-width: 1055px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width: 1056px) and (max-width: 1407px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1408px) and (max-width: 1759px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1760px) and (max-width: 2111px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 2112px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+}
 .video-thumbnail{
     position: relative;
 }
