--- a/index.css
+++ b/index.css
@@ -336,32 +336,32 @@ input::placeholder{
     margin-left: 9px;
     padding-top: 6px;
 }
-@media (max-width: 703px){
+@media (max-width: 888px){
     .video-grid{
         grid-template-columns: 1fr;
     }
 }
-@media (min-width: 704px) and (max-width: 1055px){
+@media (min-width: 889px) and (max-width: 1281px){
     .video-grid{
         grid-template-columns: 1fr 1fr;
     }
 }
-@media (min-width: 1056px) and (max-width: 1407px){
+@media (min-width: 1282px) and (max-width: 1401px){
     .video-grid{
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
-@media (min-width: 1408px) and (max-width: 1759px){
+@media (min-width: 1402px) and (max-width: 1752px){
     .video-grid{
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
-@media (min-width: 1760px) and (max-width: 2111px){
+@media (min-width: 1753px) and (max-width: 2102px){
     .video-grid{
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
 }
-@media (min-width: 2112px){
+@media (min-width: 2103px){
     .video-grid{
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
@@ -484,6 +484,31 @@ input::placeholder{
     margin-bottom: 45px;
     margin-left: 8px;
 }
+@media (max-width: 469px){
+    .shorts-grid{
+        grid-template-columns: 1fr;
+    }
+}
+@media (min-width: 554px) and (max-width: 887px){
+    .shorts-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width: 888px) and (max-width: 1007px){
+    .shorts-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1008px) and (max-width: 1283px){
+    .shorts-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1284px){
+    .shorts-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+}
 .short-thumbnail{
     width: 100%;
     cursor: pointer;
@@ -508,4 +533,3 @@ input::placeholder{
     margin-bottom: 5px;
     margin-top: 0;
 }
-
