--- a/index.css
+++ b/index.css
@@ -255,6 +255,8 @@ input::placeholder{
     z-index: 90;
 }
 .tags button:not(.all){
+    width: 60px;
+    text-overflow: ellipsis;
     padding: 7px 18px;
     border: none;
     font-size: 14px;
